--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mscs-face-api",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Microsoft Cognitive Services Face API",
-  "main": "index.js",
+  "main": "mscs-face-api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
